# pipx-in-pipx

./: .gitignore  .prettier.toml  .prettierignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  VERSIONING.rst  appveyor.yml  park.cfg  pylintrc  setup.cfg  setup.py  tox.ini
.codebuild/: buildspec.yaml  linux-buildspec.yaml  template.yaml
.github/: prettify.sh  settings.yml
.github/workflows/: cd_publish.yaml  ci_static-analysis.yaml  ci_tests.yaml  gitflow_pr-router.yaml  gitflow_promote.yaml  local-tests.yaml  ops_auto-approve-me.yaml  ops_automerge.yaml  ops_repo-manager.yaml
.travis/: install-check.sh
doc/: conf.py  index.rst  requirements.txt  spelling_wordlist.txt  versioning.rst
doc/lib/: internal.rst
doc/lib/api/: index.rst
examples/: __init__.py
examples/src/: __init__.py
examples/test/: __init__.py  pylintrc  test_make_tests.py
src/: pipipxx.py
src/pipipxx/: __init__.py
src/pipipxx/_internal/: __init__.py
test/: pylintrc  source-build-check.sh  test_pipipxx.sh  test_pipx-in-pipx.py
test/functional/: __init__.py  test_make_tests.py
test/integration/: test_make_tests.py
test/vectors/: README.rst
