[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[tool:pytest]
log_level = DEBUG
markers =
    local: superset of unit and functional (does not require network access)
    unit: mark test as a unit test (does not require network access)
    functional: mark test as a functional test (does not require network access)
    integ: mark a test as an integration test (requires network access)
    accept: mark a test as an acceptance test (requires network access)
    examples: mark a test as an examples test (requires network access)

# Flake8 Configuration
[flake8]
max_complexity = 10
max_line_length = 120
application_import_names = pipipxx
builtins = raw_input
ignore =
    # E203 is not PEP8 compliant https://github.com/ambv/black#slices
    E203,
    # W503 is not PEP8 compliant https://github.com/ambv/black#line-breaks--binary-operators
    W503,
    # Ignoring D202 (no blank lines after function docstring) because mypy confuses flake8
    D202

# Doc8 Configuration
[doc8]
max-line-length = 120

[isort]
line_length = 120
# https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
not_skip = __init__.py
known_first_party = pipipxx
known_third_party =pytest,setuptools